--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,29 @@ body {
 	font-family: 'Round Bold';
 	
 }
+
+.carachterName{
+
+  font-size: 4.5rem;
+  color: #ebc187;
+  font-family: Round;
+  font-weight: bolder;
+
+}
+
+.carachterSlogan{
+
+  font-size: 2.5rem;
+  color: #ffade5;
+  font-family: Round;
+  font-weight: bold;
+  line-height: 2.8rem;
+
+}
+
+.carachterP{
+  font-size: 1.5rem;
+  color: #ffffff;
+  font-family: Round;
+  
+}
