--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ body {
 }
 
 .ComingSoon{
-	background: linear-gradient(90deg, #ff0080, #ff8c00, #40e0d0);
+	background: linear-gradient(#a507b0, #fc0cdc, #ff8c00);
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
   	background-clip: text;
